# global-data-in-rust

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  six.rs-snippet
