[package]
name = "global-data-in-rust"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
lazy_static = "1.4"
skeptic = "0.13"
